<resources>
    <string name="app_name">RATT App</string>
    <string name="app_name_intro">RATT Transport App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">loginActivity</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="title_activity_recover_password">RecoverPasswordActivity</string>
    <string name="text_view_username">Adresa de e-mail</string>
    <string name="text_view_password">Parola</string>
    <string name="button_login">Autentificare</string>
    <string name="text_view_forgot_password">Ai uitat parola?</string>
    <string name="text_view_create_new_account">Creeaza cont nou</string>
    <string name="text_view_email_address_rec">Introduceti adresa de e-mail</string>
    <string name="button_send_email">Trimitere</string>
    <string name="text_view_create_new_account_title">Cont nou</string>
    <string name="text_view_last_name">Prenume</string>
    <string name="edit_text_last_name_example">ex.George</string>
    <string name="text_view_first_name">Nume</string>
    <string name="edit_text_first_name_example">ex.Popescu</string>
    <string name="text_view_email_address">Adresa de e-mail</string>
    <string name="edit_text_email_example">ex.smth@yahoo.com</string>
    <string name="text_view_password_initial">Parola</string>
    <string name="text_view_password_check_against_initial">Introduceti din nou parola</string>
    <string name="button_register">Inregistrare</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="text_view_buy_ticket">Achizitioneaza bilet</string>
    <string name="radio_button_tramvai">Tramvai</string>
    <string name="radio_button_express">Express</string>
    <string name="client_menu_user_profie">Profil utilizator</string>
    <string name="client_menu_payment_history">Istoricul plati</string>
    <string name="client_menu_exit_app">Delogare</string>
    <string name="title_activity_client1">Client1Activity</string>
    <string name="title_activity_one_fragment">OneFragment</string>
    <string name = "primary_drawer_item1">Profilul meu</string>
    <string name = "primary_drawer_item2">Ajutor</string>
    <string name = "primary_drawer_item3">Iesire</string>

</resources>
