<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/blurred_bck"
    tools:context="transportapp.cris.com.transportapp.NewAccountActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_view_create_new_account_title"
        android:id="@+id/tv_NewAccTitle"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_last_name"
        android:id="@+id/tv_LastName"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/tv_NewAccTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_last_name_example"
        android:id="@+id/et_lastName"
        android:textStyle="italic"
        android:layout_below="@+id/tv_LastName"
        android:layout_marginTop="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editText3"
        android:layout_alignRight="@+id/tv_PassCheck"
        android:layout_alignEnd="@+id/tv_PassCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_first_name"
        android:id="@+id/tv_FirstName"
        android:layout_above="@+id/et_lastName"
        android:layout_alignLeft="@+id/et_firstName"
        android:layout_alignStart="@+id/et_firstName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_first_name_example"
        android:textStyle="italic"
        android:id="@+id/et_firstName"
        android:layout_alignBottom="@+id/et_lastName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/et_lastName"
        android:layout_toEndOf="@+id/et_lastName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_email_address"
        android:id="@+id/tv_emailAdr"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/et_lastName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_email_example"
        android:textStyle="italic"
        android:id="@+id/et_emailAdrReg"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/tv_emailAdr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:layout_toStartOf="@+id/tv_NewAccTitle"
        android:layout_toLeftOf="@+id/tv_FirstName"
        android:layout_alignRight="@+id/et_firstName"
        android:layout_alignEnd="@+id/et_firstName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_password_initial"
        android:id="@+id/tv_PassInit"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_emailAdrReg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_passwordReg"
        android:inputType="textPassword"
        android:layout_below="@+id/tv_PassInit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/et_emailAdrReg"
        android:layout_alignEnd="@+id/et_emailAdrReg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_password_check_against_initial"
        android:id="@+id/tv_PassCheck"
        android:layout_below="@+id/et_passwordReg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_passwordRegCheck"
        android:inputType="textPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/et_passwordReg"
        android:layout_alignEnd="@+id/et_passwordReg"
        android:layout_below="@+id/tv_PassCheck"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/btn_register"
        android:onClick="registerButton"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
