<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_username"
        android:textStyle="bold"
        android:id="@+id/tv_Username"
        android:layout_marginTop="153dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_Username"
        android:layout_below="@+id/tv_Username"
        android:layout_marginTop="27dp"
        android:inputType="textAutoComplete"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_password"
        android:textStyle="bold"
        android:id="@+id/tv_Password"
        android:layout_below="@+id/et_Username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_Password"
        android:inputType="textPassword"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/tv_Password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/et_Username"
        android:layout_alignEnd="@+id/et_Username" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/btn_login"
        android:textAllCaps="false"
        android:onClick="signInButton"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/et_Password"
        android:layout_alignLeft="@+id/tv_NewAcc"
        android:layout_alignStart="@+id/tv_NewAcc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_forgot_password"
        android:textStyle="bold"
        android:id="@+id/tv_Pass"
        android:onClick="forgotPass"
        android:layout_above="@+id/tv_NewAcc"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_create_new_account"
        android:textStyle="bold"
        android:id="@+id/tv_NewAcc"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

</RelativeLayout>
